<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/detail_menu_enable_instant" android:title="@string/detail_menu_enable_instant"
          app:showAsAction="ifRoom|withText" android:icon="@drawable/ic_bolt_outline_white_24dp"/>
    <item android:id="@+id/detail_menu_disable_instant" android:title="@string/detail_menu_disable_instant"
          android:icon="@drawable/ic_bolt_white_24dp" app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/detail_menu_test" android:title="@string/detail_menu_test"/>
    <item android:id="@+id/detail_menu_copy_url" android:title="@string/detail_menu_copy_url"/>
    <item android:id="@+id/detail_menu_unsubscribe" android:title="@string/detail_menu_unsubscribe"/>
</menu>
