<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

    <TextView
            android:id="@+id/notification_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/notification_dialog_title"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:paddingStart="5dp" android:paddingEnd="5dp"
            android:textColor="?android:attr/textColorPrimary" />
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/notification_dialog_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp">
        <RadioButton
                android:text="@string/notification_dialog_30min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_30min"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
        <RadioButton
                android:text="@string/notification_dialog_1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_1h"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
        <RadioButton
                android:text="@string/notification_dialog_2h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_2h"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
        <RadioButton
                android:text="@string/notification_dialog_8h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_8h"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
        <RadioButton
                android:text="@string/notification_dialog_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_tomorrow"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
        <RadioButton
                android:text="@string/notification_dialog_forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/notification_dialog_forever"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="-3dp" android:layout_marginBottom="-3dp"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:paddingStart="5dp"
        />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
