<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <TextView
            android:id="@+id/add_dialog_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="3dp"
            android:text="@string/add_dialog_title"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:paddingStart="4dp"/>

    <TextView
            android:text="@string/add_dialog_description_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_dialog_description_below"
            android:paddingStart="4dp" android:paddingTop="3dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_dialog_topic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/add_dialog_topic_name_hint"
            android:maxLines="1" android:inputType="text" android:maxLength="64"/>
    <CheckBox
            android:text="@string/add_dialog_use_another_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_dialog_use_another_server_checkbox"
            android:layout_marginTop="-5dp" android:layout_marginBottom="-5dp" android:layout_marginStart="-3dp"/>
    <TextView
            android:text="@string/add_dialog_use_another_server_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_dialog_use_another_server_description"
            android:paddingStart="4dp" android:paddingTop="0dp" android:layout_marginTop="-5dp"
            android:visibility="gone"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:id="@+id/add_dialog_base_url_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:visibility="gone"
            app:endIconMode="custom"
            app:hintEnabled="false"
            app:boxBackgroundColor="@android:color/transparent">
        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_dialog_base_url_text"
                android:hint="@string/app_base_url"
                android:maxLines="1"
                android:layout_marginTop="-2dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                android:inputType="textNoSuggestions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:paddingTop="10dp"
                android:paddingBottom="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_dialog_instant_delivery_box">
        <CheckBox
                android:text="@string/add_dialog_instant_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/add_dialog_instant_delivery_checkbox"
                android:layout_marginTop="-8dp" android:layout_marginBottom="-5dp" android:layout_marginStart="-3dp"/>
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp" app:srcCompat="@drawable/ic_bolt_gray_24dp"
                android:id="@+id/add_dialog_instant_image"
                app:layout_constraintTop_toTopOf="@+id/main_item_text"
                app:layout_constraintEnd_toStartOf="@+id/main_item_date" android:paddingTop="3dp"
                android:layout_marginTop="3dp"/>
    </LinearLayout>
    <TextView
            android:text="@string/add_dialog_instant_delivery_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_dialog_instant_delivery_description"
            android:paddingStart="4dp" android:paddingTop="0dp" android:layout_marginTop="-5dp"
            android:visibility="gone"/>
</LinearLayout>
